--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravel/vonage-notification-channel": "^3.3",
-        "twilio/sdk": "^8.4"
+        "twilio/sdk": "^8.4",
+        "infobip/infobip-api-php-client": "6.2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
